Fix profile list layout on mobile

--- a/assets/css/style_base.css
+++ b/assets/css/style_base.css
@@ -30,8 +30,7 @@ Last updated: September 16, 2015
 	box-sizing: border-box;
 	line-height: normal;
 }
-#profile-list .rbprofile-list .image {
-	float: left;
+#profile-list .rbprofile-list .image {	
 	position: relative;
 	overflow: hidden;
 }
@@ -543,7 +542,7 @@ img.fillheight {
 #rbprofile #profile-picture img { width: 100%; max-width: 100%; float: left; }
 .rbcolumn .addthis_toolbox { margin-bottom: 15px; padding: 7px; background: #ddd; }
 .rblayout .profile-photos { padding: 10px 0px 0px 10px; background: #e9e9e9; overflow: hidden; }
-.rblayout .profile-photos .photo { vertical-align: top; float: left; margin: 0px 10px 10px 0px; }
+.rblayout .profile-photos .photo { vertical-align: top; float: left; margin: 0px 10px 10px 0px; line-height: normal; }
 
 /* Quick Search */
 #rbquick-search { overflow: hidden; padding: 30px 0; padding-top: 0; margin-top: 30px; }
@@ -619,17 +618,77 @@ img.fillheight {
 .rbcol-11 { width: 91.66667%; }
 .rbcol-12 { width: 100%; }
 
-/* Small Devices ------------ */
-@media only screen and (max-width: 768px) {
- 
-  body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%; min-width: 0; margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0; }
-  /* The Grid --- */
-  .rbcolumn { width: auto !important; float: none; margin-bottom: 30px; clear: both; }
-  .rbcolumn:last-child { float: none; }
-  [class*="rbcolumn"] + [class*="rbcolumn"]:last-child { float: none; }
-  .rbcolumn:before, .rbcolumn:after { content: ""; display: table; }
-  .rbcolumn:after, { clear: both; }
+/*==========  Non-Mobile First Method  ==========*/
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+
 }
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+	body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%; min-width: 0; margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0; }
+	/* The Grid --- */
+	.rbcolumn { width: auto !important; float: none; margin-bottom: 30px; clear: both; }
+	.rbcolumn:last-child { float: none; }
+	[class*="rbcolumn"] + [class*="rbcolumn"]:last-child { float: none; }
+	.rbcolumn:before, .rbcolumn:after { content: ""; display: table; }
+	.rbcolumn:after, { clear: both; }
+
+	#results-options, #results-info {
+		float: none;
+		text-align: center;
+		margin-bottom: 15px;
+	}
+	.rbpagination > span,
+	.rbpagination > a {
+		float: none;
+		display: inline-block;
+	}
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 480px) {	
+	#profile-list {
+		text-align: center;
+	}
+	#profile-list.three-profiles .rbprofile-list,
+	#profile-list.two-profiles .rbprofile-list,
+    #profile-list.four-profiles .rbprofile-list,
+    #profile-list.five-profiles .rbprofile-list,
+    #profile-list.six-profiles .rbprofile-list,
+    #profile-list.seven-profiles .rbprofile-list,
+    #profile-list.eight-profiles .rbprofile-list,
+    #profile-list.nine-profiles .rbprofile-list,
+    #profile-list.ten-profiles .rbprofile-list {
+    	width: 50%;
+    }
+    #profile-list .rbprofile-list {
+    	float: none;
+    	display: inline-block;
+    }
+}
+
+/* Custom, iPhone Retina */ 
+@media only screen and (max-width : 320px) {
+	#profile-list.three-profiles .rbprofile-list,
+	#profile-list.two-profiles .rbprofile-list,
+    #profile-list.four-profiles .rbprofile-list,
+    #profile-list.five-profiles .rbprofile-list,
+    #profile-list.six-profiles .rbprofile-list,
+    #profile-list.seven-profiles .rbprofile-list,
+    #profile-list.eight-profiles .rbprofile-list,
+    #profile-list.nine-profiles .rbprofile-list,
+    #profile-list.ten-profiles .rbprofile-list {
+    	width: 100%;
+    }
+}
+
 .rb_profile_tool #profile-list { margin-top: 10px; }
 #profile-list .rb_profile_tool a { text-decoration: none; font-size: 70%; }
 .rb_profile_tool a.active.favorite { color:#ccc; }
